--- a/custom_components/ha_seam/services.yaml
+++ b/custom_components/ha_seam/services.yaml
@@ -18,7 +18,7 @@ set_lock_access_code:
   description: Set a access_code on a lock
   target:
     entity:
-      domain: lock
+      domain: ha_seam
       integration: ha_seam
   fields:
     access_code:
