--- a/custom_components/ha_seam/services.yaml
+++ b/custom_components/ha_seam/services.yaml
@@ -1,24 +1,27 @@
-# clear_lock_access_code:
-#   name: Clear a access_code from a lock
-#   description: Clear a access_code from a lock
-#   target:
-#     entity:
-#       domain: lock
-#       integration: ha_seam
-#   fields:
-#     name:
-#       name: Name
-#       description: Guest Name
-#       required: true
-#       example: 'John'
-#       selector:
-#         text:
+clear_lock_access_code:
+  name: Clear a access_code from a lock
+  description: Clear a access_code from a lock
+  fields:
+    entity_id:
+      name: Lock
+      description: Lock to add a code to
+      required: true
+      selector:
+        entity:
+          domain: lock
+    name:
+      name: Name
+      description: Guest Name
+      required: true
+      example: "John"
+      selector:
+        text:
+
 set_lock_access_code:
   name: Set a access_code on a lock
   description: Set a access_code on a lock
   target:
     entity:
-      domain: ha_seam
       integration: ha_seam
   fields:
     access_code:
